# antifragile

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: benches.yml  ci.yml  release.yml
examples/: basic_usage.rs
examples/adaptive-pricing-api/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/adaptive-pricing-api/grafana/dashboards/: antifragile.json
examples/adaptive-pricing-api/grafana/provisioning/dashboards/: dashboards.yml
examples/adaptive-pricing-api/grafana/provisioning/datasources/: datasources.yml
examples/adaptive-pricing-api/loadtest/: script.js
examples/adaptive-pricing-api/prometheus/: prometheus.yml
examples/adaptive-pricing-api/src/: cache.rs  main.rs  metrics.rs  pricing.rs
src/: antifragile.rs  lib.rs
tests/: integration_tests.rs
