[package]
name = "antifragile"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
description = "A Rust library."
license = "MIT"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
