[package]
name = "antifragile"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
authors = ["Oleksandr Prokhorenko <warbles.lieu_04@icloud.com>"]
description = "Antifragile is a Rust library implementing concepts from Nassim Nicholas Taleb's antifragility theory. The library provides a trait-based system for analyzing how systems respond to stress and volatility, classifying them into three categories: Fragile (harmed by volatility), Robust (unaffected), and Antifragile (benefits from volatility)"
license = "MIT"
repository = "https://github.com/minikin/antifragile"
homepage = "https://github.com/minikin/antifragile"
keywords = [
    "antifragile",
    "antifragility",
    "fragile",
    "robust",
    "stress",
    "volatility",
]
categories = ["data-structures", "encoding", "rust-patterns", "algorithms"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]
