[package]
name = "adaptive-pricing-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
antifragile = { path = "../../" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
metrics = "0.24"
metrics-exporter-prometheus = "0.18.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
